fixed alignment

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100vh;
+}
+
 .bg-img {
   position: fixed;
   height: 100%;
@@ -6,15 +11,22 @@
   z-index: -1;
 }
 
+.container-fluid {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
 .login-form {
   margin: auto;
-  align-items: center;
-  padding: 2em;
   display: flex;
   flex-direction: column;
+  align-items: center;
   border-radius: 30px;
   box-shadow: 0 0 2em rgb(5, 5, 5);
   padding: 20px;
   background-color: var(--gray);
-  width: 33%;
+  max-width: 33%;
 }
